un peu plus avancer mais bug sur ajout biens

--- a/app/templates/home/espaceUser.html.twig
+++ b/app/templates/home/espaceUser.html.twig
@@ -7,7 +7,7 @@
         <div class="d-flex flex-column ">
         <button class="btn btn-outline-primary fw-bold text mt-2"><a href="/user/edit/{{ app.user.id }}">Mes information personnelles</br></a></button>
         <button class="btn btn-outline-primary fw-bold text mt-2"><a href="">Mes réservations</br></a></button>
-        <button class="btn btn-outline-primary fw-bold text mt-2"><a href="/mesBiens">mes biens </br></a></button>
+        <button class="btn btn-outline-primary fw-bold text mt-2"><a href="/mesBiens/{{ app.user.id }}">mes biens </br></a></button>
         <button  class="btn btn-back text mt-5"><a href="/">Retour à l'acceuil </br></a></button>
         </div>
 </div>
