--- a/app/templates/annonce/edit.html.twig
+++ b/app/templates/annonce/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Annonce{% endblock %}
 
 {% block body %}
-    <h1>Edit Annonce</h1>
+    <h1>Mise à jour</h1>
 
-    {{ include('annonce/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_annonce_index') }}">back to list</a>
-
+    {{ include('annonce/_form.html.twig', {'button_label': 'Update' })}}
     {{ include('annonce/_delete_form.html.twig') }}
+
+    <a href="/mesBiens/{{ app.user.id }}" class="btn btn-back text mt-2">Retour</a>
+
 {% endblock %}
