--- a/app/templates/annonce/new.html.twig
+++ b/app/templates/annonce/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('annonce/_form.html.twig') }}
 
-    <a href="{{ path('app_annonce_index') }}">back to list</a>
+    <a href="/mesBiens/{{ app.user.id }}">Retour</a>
 {% endblock %}
