avant dernier psuh

--- a/templates/annonce/new.html.twig
+++ b/templates/annonce/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('annonce/_form.html.twig') }}
 
-    <a href="/mesBiens/{{ app.user.id }}">Retour</a>
+    <a class="btn btn-back text m-2" href="/mesBiens/{{ app.user.id }}">Retour</a>
 {% endblock %}
